# godworks-frontier-pretraining-network-aem

./: CONTRIBUTOR_RIGOR.md  Makefile  PUBLIC_HANDOFF.md  README.md  pyproject.toml
aem_poc/: __init__.py  aem_bootstrap_growth.py  aem_credit_ledger.py  aem_credit_ledger_skill.py  aem_inference_receipts.py  aem_network_bricks.py  aem_network_cards.py  aem_skill_receipts.py  demo.py  diff_apply.py  distill_gate.py  e2e_gate_demo.py  evidence_artifact_index.py  evidence_demo.py  evidence_metadata_check.py  evidence_pipeline.py  evidence_seal_verify.py  evidence_second_stage_seal.py  evidence_second_stage_seal_verify.py  evidence_status.py  evidence_upload_drift.py  evidence_upload_policy.py  evidence_verify.py  hash_utils.py  loaders.py  objective_admission.py  patch_backend.py  patch_gate_demo.py  protocol.py  repo_patch_policy.py  sandbox_verifier.py  schema_validation.py  trace_maint.py  trace_store.py  verifier_config.py  workspace_cmd.py  workspace_diff.py  workspace_prep.py
docs/: AEM_ARCHITECTURE_PACKET_INDEX_DESIGN.md  AEM_BOOTSTRAP_GROWTH_DESIGN.md  AEM_CREDIT_LEDGER_SETTLEMENT_DESIGN.md  AEM_CREDIT_ROUTED_INFERENCE_NETWORK_DESIGN.md  AEM_ECONOMIC_MODEL_DESIGN.md  AEM_FRONTIER_EXPERT_MESH_DESIGN.md  AEM_INFERENCE_WORK_RECEIPT_DESIGN.md  AEM_MISSING_BRICKS_TECH_STACK_DESIGN.md  AEM_NETWORK_BRICKS_DESIGN.md  AEM_NETWORK_ECONOMY_CHECK_DESIGN.md  AEM_NODECARD_HOSTADVERTISEMENT_DESIGN.md  AEM_PRODUCT_GRADE_ROADMAP_DESIGN.md  AEM_SKILL_RECEIPT_DESIGN.md  AEM_SKILL_RECEIPT_INDEX_DESIGN.md  AEM_UNIFIED_ARCHITECTURE_DESIGN.md  ARCHITECTURE.md  CI_ARTIFACT_UPLOAD_DESIGN.md  (+66 more)
(+74 files in other folders)
