[project]
name = "aem-poc"
version = "0.1.0"
description = "Accretive Expert Mesh proof-of-concept router/admission skeleton"
requires-python = ">=3.10"
readme = "README.md"
authors = [{ name = "AEM Contributors" }]

[project.scripts]
aem-demo = "aem_poc.demo:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["aem_poc"]
